<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Dota Alarm Clock</string>
    <string name="btn_start_alarm">Set alarm clock</string>
    <string name="item_box_descr">itemBoxDescription</string>
    <string name="my_email">rollallover@gmail.com</string>
    <string name="my_name">Andrii Hryhoriev</string>
    <string name="my_subtitle">Android enthusiast</string>
    <string name="my_brief_description">Feel free to send me your proposals and comments!</string>
    <string name="my_linkedin">andrii-hryhoriev-334881160</string>
    <string name="my_github">Corwin93</string>
    <string name="blade_of_alacrity">Blade of Alacrity</string>
    <string name="yasha">Yasha</string>
    <string name="band_of_elvenskin">Band of Elvenskin</string>
    <string name="recipe">Recipe</string>
    <string name="sange">Sange</string>
    <string name="sange_and_yasha">Sange and Yasha</string>
    <string name="ogre_club">Ogre Club</string>
    <string name="belt_of_strength">Belt of Strength</string>
    <string name="quarterstaff">Quarterstaff</string>
    <string name="robe_of_the_magi">Robe of the Magi</string>
    <string name="sages_mask">Sage\'s Mask</string>
    <string name="oblivion_staff">Oblivion Staff</string>
    <string name="orchid_malevolence">Orchid Malevolence</string>
    <string name="crystalys">Crystalys</string>
    <string name="broadsword">Broadsword</string>
    <string name="blades_of_attack">Blades of Attack</string>
    <string name="bloodthorn">Bloodthorn</string>
    <string name="enchanted_mango">Enchanted Mango</string>
    <string name="sentry_ward">Sentry Ward</string>
    <string name="observer_ward">Observer Ward</string>
    <string name="tome_of_knowledge">Tome of Knowledge</string>
    <string name="bottle">Bottle</string>
    <string name="iron_branch">Iron Branch</string>
    <string name="gauntlets_of_strength">Gauntlets of Strength</string>
    <string name="slippers_of_agility">Slippers of Agility</string>
    <string name="mantle_of_intelligence">Mantle of Intelligence</string>
    <string name="circlet">Circlet</string>
    <string name="staff_of_wizardry">Staff of Wizardry</string>
    <string name="ring_of_protection">Ring of Protection</string>
    <string name="quelling_blade">Quelling Blade</string>
    <string name="infused_raindrop">Infused Raindrop</string>
    <string name="stout_shield">Stout Shield</string>
    <string name="orb_of_venom">Orb Of Venom</string>
    <string name="blight_stone">Blight Stone</string>
    <string name="chainmail">Chainmail</string>
    <string name="helm_of_iron_will">Helm of Iron Will</string>
    <string name="javelin">Javelin</string>
    <string name="claymore">Claymore</string>
    <string name="mithril_hammer">Mithril Hammer</string>
    <string name="magic_stick">Magic Stick</string>
    <string name="wind_lace">Wind Lace</string>
    <string name="ring_of_regen">Ring of Regen</string>
    <string name="boots_of_speed">Boots of Speed</string>
    <string name="gloves_of_haste">Gloves of Haste</string>
    <string name="cloak">Cloak</string>
    <string name="ring_of_health">Ring of Health</string>
    <string name="gem_of_true_sight">Gem of True Sight</string>
    <string name="void_stone">Void Stone</string>
    <string name="morbid_mask">Morbid Mask</string>
    <string name="shadow_amulet">Shadow Amulet</string>
    <string name="blink_dagger">Blink Dagger</string>
    <string name="ghost_scepter">Ghost Scepter</string>
    <string name="energy_booster">Energy Booster</string>
    <string name="vitality_booster">Vitality Booster</string>
    <string name="point_booster">Point Booster</string>
    <string name="platemail">Platemail</string>
    <string name="talisman_of_evasion">Talisman of Evasion</string>
    <string name="hyperstone">Hyperstone</string>
    <string name="ultimate_orb">Ultimate Orb</string>
    <string name="demon_edge">Demon Edge</string>
    <string name="mystic_staff">Mystic Staff</string>
    <string name="reaver">Reaver</string>
    <string name="eaglesong">Eaglesong</string>
    <string name="sacred_relic">Sacred Relic</string>
    <string name="magic_wand">Magic Wand</string>
    <string name="bracer">Bracer</string>
    <string name="null_talisman">Null Talisman</string>
    <string name="wraith_band">Wraith Band</string>
    <string name="soul_ring">Soul Ring</string>
    <string name="phase_boots">Phase Boots</string>
    <string name="power_treads">Power Treads</string>
    <string name="perseverance">Perseverance</string>
    <string name="hand_of_midas">Hand of Midas</string>
    <string name="boots_of_travel">Boots of Travel</string>
    <string name="moon_shard">Moon Shard</string>
    <string name="ring_of_basilius">Ring of Basilius</string>
    <string name="headdress">Headdress</string>
    <string name="buckler">Buckler</string>
    <string name="urn_of_shadows">Urn of Shadows</string>
    <string name="tranquil_boots">Tranquil Boots</string>
    <string name="ring_of_aquila">Ring of Aquila</string>
    <string name="medallion_of_courage">Medallion of Courage</string>
    <string name="arcane_boots">Arcane Boots</string>
    <string name="drum_of_endurance">Drum of Endurance</string>
    <string name="vladmirs_offering">Vladmir\'s Offering</string>
    <string name="mekansm">Mekansm</string>
    <string name="spirit_vessel">Spirit Vessel</string>
    <string name="pipe_of_insight">Pipe of Insight</string>
    <string name="guardian_greaves">Guardian Greaves</string>
    <string name="glimmer_cape">Glimmer Cape</string>
    <string name="force_staff">Force Staff</string>
    <string name="veil_of_discord">Veil of Discord</string>
    <string name="aether_lens">Aether Lens</string>
    <string name="necronomicon">Necronomicon</string>
    <string name="solar_crest">SolarCrest</string>
    <string name="dagon">Dagon</string>
    <string name="euls_scepter_of_divinity">Eul\'s Scepter of Divinity</string>
    <string name="rod_of_atos">Rod of Atos</string>
    <string name="aghanims_scepter">Aghanim\'s Scepter</string>
    <string name="nullifier">Nullifier</string>
    <string name="refresher_orb">Refresher Orb</string>
    <string name="scythe_of_vyse">Scythe of Vyse</string>
    <string name="octarine_core">Octarine Core</string>
    <string name="hood_of_defiance">Hood of Defiance</string>
    <string name="vanguard">Vanguard</string>
    <string name="blade_mail">Blade Mail</string>
    <string name="soul_booster">Soul Booster</string>
    <string name="crimson_guard">Crimson Guard</string>
    <string name="aeon_disk">Aeon Disk</string>
    <string name="black_king_bar">Black King Bar</string>
    <string name="lotus_orb">Lotus Orb</string>
    <string name="hurricane_pike">Hurricane Pike</string>
    <string name="shivas_guard">Shiva\'s Guard</string>
    <string name="linkens_sphere">Linken\'s Sphere</string>
    <string name="bloodstone">Bloodstone</string>
    <string name="manta_style">Manta Style</string>
    <string name="heart_of_tarrasque">Heart of Tarrasque</string>
    <string name="assault_cuirass">Assault Cuirass</string>
    <string name="armlet_of_mordiggian">Armlet of Mordiggian</string>
    <string name="meteor_hammer">Meteor Hammer</string>
    <string name="shadow_blade">Shadow Blade</string>
    <string name="skull_basher">Skull Basher</string>
    <string name="battle_fury">Battle Fury</string>
    <string name="monkey_king_bar">Monkey King Bar</string>
    <string name="ethereal_blade">Ethereal Blade</string>
    <string name="radiance">Radiance</string>
    <string name="daedalus">Daedalus</string>
    <string name="butterfly">Butterfly</string>
    <string name="silver_edge">Silver Edge</string>
    <string name="divine_rapier">Divine Rapier</string>
    <string name="abyssal_blade">Abyssal Blade</string>
    <string name="dragon_lance">Dragon Lance</string>
    <string name="kaya">Kaya</string>
    <string name="mask_of_madness">Mask of Madness</string>
    <string name="helm_of_the_dominator">Helm of the Dominator</string>
    <string name="echo_sabre">Echo Sabre</string>
    <string name="maelstrom">Maelstrom</string>
    <string name="diffusal_blade">Diffusal Blade</string>
    <string name="heavens_halberd">Heaven\'s Halberd</string>
    <string name="desolator">Desolator</string>
    <string name="eye_of_skadi">Eye of Skadi</string>
    <string name="satanic">Satanic</string>
    <string name="mjollnir">Mjollnir</string>
    <string name="btn_stop_alarm">Stop alarm</string>
    <string name="main_activity_background">Main background</string>
    <string name="btn_cancel_alarm">Cancel alarm</string>
    <string name="alarm_set">Alarm set!</string>
    <string name="button_lock">Button lock</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-9422260580518983/7680827242</string>
    <string name="admob_app_id">ca-app-pub-9422260580518983~5469596878</string>
    <string name="info_text_1">1. Pick the alarm time and press the button \"Set Alarm Clock\". According to energy saving policy alarm may start ringing 10–30 seconds later.</string>
    <string name="info_text_2">2. Alarm set. You may now close application. To return to this screen to cancel alarm just reopen the app or press push-notification in your status bar.</string>
    <string name="info_text_3">3. When the alarm starts ringing you\'re proposed to solve a quiz. Recall the recipe of the artifact presented on top and fill empty cells in the second row by dragging corresponding items from the third.</string>
    <string name="info_text_4">4. When the quiz is solved the button \"Stop Alarm\" appears.</string>
    <string name="info_text_5" >■ What if I closed the app during quiz solving and the signal doesn\'t stop?\n- Don\'t worry. Just reopen the app and you will be proposed to solve a new quiz.\n■ How can I turn off the alarm without solving a quiz?\n- You can turn off the sound with hardware key \"Volume down\" if you really want to have a nap.\n- But to fully turn the alarm off evading the quiz you have to \"kill\" the app in your smartphone\'s Settings menu.</string>
    <string name="about">About author</string>
</resources>
