<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightBlue">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <TextView
        android:id="@+id/tvInfo1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/InfoText"
        android:text="@string/info_text_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <ImageView
        android:id="@+id/ivInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/info1"
        app:layout_constraintTop_toBottomOf="@id/tvInfo1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tvInfo2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/InfoText"
        android:text="@string/info_text_2"
        app:layout_constraintTop_toBottomOf="@id/ivInfo1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <ImageView
        android:id="@+id/ivInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/info2"
        app:layout_constraintTop_toBottomOf="@id/tvInfo2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tvInfo3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/InfoText"
        android:text="@string/info_text_3"
        app:layout_constraintTop_toBottomOf="@id/ivInfo2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <ImageView
        android:id="@+id/ivInfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/info3"
        app:layout_constraintTop_toBottomOf="@id/tvInfo3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tvInfo4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/InfoText"
        android:text="@string/info_text_4"
        app:layout_constraintTop_toBottomOf="@id/ivInfo3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <ImageView
        android:id="@+id/ivInfo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/info4"
        app:layout_constraintTop_toBottomOf="@id/tvInfo4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tvInfo5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/InfoText"
        android:text="@string/info_text_5"
        app:layout_constraintTop_toBottomOf="@id/ivInfo4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"/>
    <Button
        android:id="@+id/btnAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onAboutClicked"
        app:layout_constraintTop_toBottomOf="@id/tvInfo5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/AboutButton"
        android:text="@string/about"
        android:textSize="36sp"
        android:textColor="@color/lightGrey"
        android:layout_margin="8dp"/>
</android.support.constraint.ConstraintLayout>
</ScrollView>